project_1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-1
  labels:
    name: project-1
