project_1/service.yaml
##service to expose the nginx application
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: project-1
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
